Bug 329716 - Text in form combo box trimmed
Summary: Text in form combo box trimmed
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Forms (other bugs)
Version First Reported In: 2.4.x
Platform: unspecified All
: NOR normal
Target Milestone: 2.8
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-08 09:37 UTC by Jarosław Staniek
Modified: 2014-01-12 23:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8 Beta 2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2014-01-08 09:37:45 UTC
Text in form combo box trimmed horizontally.

Reproducible: Always

Steps to Reproduce:
1. Add a form combo box and associate with data text about 20 characters long.
2. Go to the data view of the form.
Actual Results:  
Trimmed text despite the combo box being wide enough to fit the text.

Expected Results:  
Text fits completely in the box.
Comment 1 Jarosław Staniek 2014-01-08 15:45:20 UTC
Git commit 4fac2367795324094ba7c306e755a54effb957c4 by Jaroslaw Staniek.
Committed on 08/01/2014 at 10:39.
Pushed by staniek into branch 'master'.

Make text in form combo box not trimmed
FIXED-IN:2.8

M  +1    -0    kexi/plugins/forms/widgets/kexidbcombobox.cpp

http://commits.kde.org/calligra/4fac2367795324094ba7c306e755a54effb957c4
Comment 2 Jarosław Staniek 2014-01-08 15:46:20 UTC
Git commit 51cc163741ffa7f6cf9758a600bd2837da53c6cc by Jaroslaw Staniek.
Committed on 08/01/2014 at 10:39.
Pushed by staniek into branch 'calligra/2.8'.

Make text in form combo box not trimmed
FIXED-IN:2.8

M  +1    -0    kexi/plugins/forms/widgets/kexidbcombobox.cpp

http://commits.kde.org/calligra/51cc163741ffa7f6cf9758a600bd2837da53c6cc