Make text in form combo box not trimmed

BUG:329716
FIXED-IN:2.8